Archive/e27ed91f3cfae724b030908c2158854c-d6c803482d553f395422ddf5510f4bb0/output
+ g++ -std=c++11 -O2 -Wall -Wextra -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:3:30: error: lvalue required as left operand of assignment
     (localvar1 || localvar2) = 5;
                              ^
